--- a/html/robot.html
+++ b/html/robot.html
@@ -9,15 +9,19 @@
       <h1> Hello there!</h1>    
       <canvas id="myCanvas" width="400" height="300"></canvas>
 
-      <div class="wrapper">
-        <button id="startSpeak" >no speech detected, click here to speak </button>
+      <button id="startSpeak" >no speech detected, click here to speak </button>
+
+      <div class="chat">
         <div id="dialog_area">
-            <div id="speech"></div>
-            <div id="robotReply"></div>
+            <div class="bubble" id="robotReply1"></div>
+            <div class="bubbledark" id="speech"></div>
+            <div class="bubble" id="robotReply2"></div>
+            <!-- <div class="bubble">"you said : how can I help you 1 2 3 4 5 6 7 8 9 10。。。。。。。。。。。。"</div>
+            <div class="bubbledark">"ha ha : how can I help you 1 2 3 4 5 6 7 8 9 10"</div> -->
         </div>
       </div>
-
     </div>
+
   </body>
 
 </html>
