--- a/html/lulu.html
+++ b/html/lulu.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" type="text/css" href="lulu.css">
         <script src="lulu.js"></script>
         <script src="lib.js"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.js" crossorigin="anonymous"></script>
     </head>
     <body onload="createOnlineQuestionnaire()">
     <div class="header">
@@ -10,13 +11,15 @@
       <h4> Please rate this face in terms of the following scales.</h4>
       
     <div id="main-container">    
-        <div classs="section1">
+        <div class="section1">
           <div class="robot">
             <!-- This empty img will be filled through JS -->
             <img id="robotFace" src="" >
             <p> Name this robot: </p>
             <input type="text" name="name" value="e.g. Bule faced robot">
           </div>
+        </div>
+        <div class="section1">
         </div>
         <div class="section2">
         </div>
